--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,22 @@
 <nb-layout>
   <nb-layout-header fixed>
-    <div
-      class="button-group"
-      style="width: 100%; display: flex; justify-content: space-between"
-    >
+    <div class="button-group">
       <nb-user
-        nbButton
-        nbContextMenuTag="my-context-menu"
-        [nbContextMenu]="items"
-        nbContextMenuTrigger="click"
-        shape="rectangle"
-        class="top-left"
-        size="large"
         name="Nikita Poltoratsky"
         title="full-stack developer"
-        badgeText="99+"
-        badgeStatus="success"
-        badgePosition="bottom right"
-        picture="../assets/man-597178_960_720.jpg"
+        (click)="toggle()"
       >
-        >
       </nb-user>
-
-      <nb-select
-        placeholder="Custom label"
-        [formControl]="selectedItemFormControl"
-        (selectedChange)="changeTheme($event)"
-      >
-        <nb-option value="1" *ngFor="let item of themes" [value]="item">{{
-          item
-        }}</nb-option>
-      </nb-select>
     </div>
   </nb-layout-header>
-
-  <nb-layout-column class="colored-column-warning">
-    <router-outlet></router-outlet>
-  </nb-layout-column>
+  <nb-sidebar tag="left"
+    ><nb-card>
+      <nb-menu [items]="items"> </nb-menu> </nb-card
+  ></nb-sidebar>
+  <nb-layout-column
+    ><nb-layout>
+      <nb-layout-column>
+        <router-outlet></router-outlet>
+      </nb-layout-column> </nb-layout
+  ></nb-layout-column>
 </nb-layout>
