--- a/src/app/sales/sales.component.scss
+++ b/src/app/sales/sales.component.scss
@@ -1,13 +1,65 @@
+.lottery-numbers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+
+  button {
+    margin-bottom: 10px;
+  }
+
+  .number-container {
+    display: flex;
+    justify-content: center;
+
+    .number-item {
+      font-size: 30px;
+      font-weight: bold;
+      padding: 10px;
+      border: 2px solid #000;
+      border-radius: 50%;
+      margin: 5px;
+      animation: lotteryAnimation 0.8s infinite;
+    }
+  }
+}
+
+@keyframes lotteryAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 .form-group {
   margin-bottom: 20px;
+
+  label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+
+  input {
+    width: 100%;
+  }
 }
 
-label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
+.button-group {
+  display: flex;
+  justify-content: space-between;
 
-button {
-  margin-top: 20px;
+  .button-previous {
+    margin-right: 10px;
+  }
+
+  .button-next {
+    margin-left: 10px;
+  }
 }
