--- a/src/app/shared/files-upload/files-upload.component.html
+++ b/src/app/shared/files-upload/files-upload.component.html
@@ -1,30 +1,34 @@
-<div
-  class="dropzone"
-  (dragover)="onDragOver($event)"
-  (dragleave)="onDragLeave($event)"
-  (drop)="onDrop($event)"
->
-  <p>Arrastra y suelta aquí tus archivos</p>
-  <button nbButton status="primary" (click)="fileInput.click()">
-    Seleccionar archivos
-  </button>
-  <input
-    type="file"
-    hidden
-    #fileInput
-    (change)="onFileSelected($event)"
-    multiple
-  />
+<nb-card>
+  <nb-card-body>
+    <div
+      class="dropzone"
+      (dragover)="onDragOver($event)"
+      (dragleave)="onDragLeave($event)"
+      (drop)="onDrop($event)"
+    >
+      <p>Arrastra y suelta aquí tus archivos</p>
+      <button nbButton status="primary" (click)="fileInput.click()">
+        Seleccionar archivos
+      </button>
+      <input
+        type="file"
+        hidden
+        #fileInput
+        (change)="onFileSelected($event)"
+        multiple
+      />
 
-  <div
-    *ngIf="selectedFiles.length > 0"
-    class="selected-files"
-    style="text-overflow: ellipsis"
-  >
-    <p>Archivos seleccionados:</p>
-    <ul>
-      <li *ngFor="let file of selectedFiles">{{ file.name }}</li>
-    </ul>
-    <button nbButton status="primary" (click)="uploadFiles()">Subir</button>
-  </div>
-</div>
+      <div
+        *ngIf="selectedFiles.length > 0"
+        class="selected-files"
+        style="text-overflow: ellipsis"
+      >
+        <p>Archivos seleccionados:</p>
+        <ul>
+          <li *ngFor="let file of selectedFiles">{{ file.name }}</li>
+        </ul>
+        <button nbButton status="primary" (click)="uploadFiles()">Subir</button>
+      </div>
+    </div>
+  </nb-card-body>
+</nb-card>
