--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,2 @@
-<nb-layout>
-  <nb-layout-header fixed>
-    <div class="button-group">
-      <nb-user
-        name="Nikita Poltoratsky"
-        title="full-stack developer"
-        (click)="toggle()"
-      >
-      </nb-user>
-    </div>
-  </nb-layout-header>
-  <nb-sidebar tag="left" state="collapsed">
-    <nb-card>
-      <nb-menu [items]="items"></nb-menu>
-    </nb-card>
-  </nb-sidebar>
-  <nb-layout-column
-    ><nb-layout>
-      <nb-layout-column>
-        <router-outlet></router-outlet>
-      </nb-layout-column> </nb-layout
-  ></nb-layout-column>
-</nb-layout>
+<app-home></app-home>
+
