--- a/src/app/shared/files-upload/files-upload.component.scss
+++ b/src/app/shared/files-upload/files-upload.component.scss
@@ -1,18 +1,10 @@
-* {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
 .dropzone {
+  width: min(100%, 350px);
   background-color: aliceblue;
   border: 2px dashed #ccc;
   padding: 2rem;
   text-align: center;
   cursor: pointer;
-  max-width: 300px;
-  text-align: center;
-  width: max-content;
-
   p {
     margin: 0;
     font-size: 1.2rem;
@@ -25,6 +17,7 @@
 
 .selected-files {
   margin-top: 2rem;
+  width: 300px;
 
   p {
     margin-bottom: 1rem;
@@ -32,13 +25,15 @@
   }
 
   ul {
-    list-style: none;
     padding: 0;
     margin: 0;
 
     li {
       margin-bottom: 0.5rem;
       font-size: 1rem;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
 
