--- a/src/app/pages/configuration/configuration.component.html
+++ b/src/app/pages/configuration/configuration.component.html
@@ -1,1 +1,7 @@
-<div><button (click)="open()" nbButton>Open Dialog</button></div>
+<nb-layout>
+  <nb-layout-column
+    ><div>
+      <button (click)="open()" nbButton>Open Dialog</button>
+    </div></nb-layout-column
+  >
+</nb-layout>
