--- a/src/app/pages/auth/registration/registration.component.html
+++ b/src/app/pages/auth/registration/registration.component.html
@@ -1,1 +1,110 @@
-<p>registration works!</p>
+<nb-card>
+  <nb-card-header>Formulario de Registro</nb-card-header>
+  <nb-card-body>
+    <form [formGroup]="myForm" (ngSubmit)="submitForm()">
+      <div class="form-group">
+        <nb-input-group>
+          <input
+            nbInput
+            id="name"
+            formControlName="name"
+            placeholder="Nombre"
+          />
+        </nb-input-group>
+        <div class="error-message" *ngIf="isFieldInvalid('name', 'required')">
+          El nombre es requerido
+        </div>
+        <div class="error-message" *ngIf="isFieldInvalid('name', 'minlength')">
+          El nombre debe tener al menos 3 caracteres
+        </div>
+      </div>
+      <div class="form-group">
+        <nb-input-group>
+          <input
+            nbInput
+            id="email"
+            formControlName="email"
+            placeholder="Correo Electrónico"
+          />
+        </nb-input-group>
+        <div class="error-message" *ngIf="isFieldInvalid('email', 'required')">
+          El correo electrónico es requerido
+        </div>
+        <div class="error-message" *ngIf="isFieldInvalid('email', 'email')">
+          El correo electrónico no es válido
+        </div>
+      </div>
+      <div class="form-group">
+        <nb-input-group>
+          <input
+            [type]="getInputType()"
+            nbInput
+            id="password"
+            formControlName="password"
+            placeholder="Contraseña"
+          /><button nbSuffix nbButton ghost (click)="toggleShowPassword()">
+            <nb-icon
+              [icon]="showPassword ? 'eye-outline' : 'eye-off-2-outline'"
+              pack="eva"
+              [attr.aria-label]="
+                showPassword ? 'hide password' : 'show password'
+              "
+            >
+            </nb-icon>
+          </button>
+        </nb-input-group>
+        <div
+          class="error-message"
+          *ngIf="isFieldInvalid('password', 'required')"
+        >
+          La contraseña es requerida
+        </div>
+        <div
+          class="error-message"
+          *ngIf="isFieldInvalid('password', 'minlength')"
+        >
+          La contraseña debe tener al menos 6 caracteres
+        </div>
+      </div>
+      <div class="form-group">
+        <nb-input-group>
+          <input
+            type="password"
+            nbInput
+            id="confirmPassword"
+            formControlName="confirmPassword"
+            placeholder="Confirmar Contraseña"
+          />
+        </nb-input-group>
+        <div
+          class="error-message"
+          *ngIf="isFieldInvalid('confirmPassword', 'required')"
+        >
+          La confirmación de contraseña es requerida
+        </div>
+        <div
+          class="error-message"
+          *ngIf="isFieldInvalid('confirmPassword', 'passwordMismatch')"
+        >
+          Las contraseñas no coinciden
+        </div>
+      </div>
+      <div class="form-group">
+        <nb-checkbox formControlName="agreeToTerms"
+          >Acepto los términos y condiciones</nb-checkbox
+        >
+        <div
+          class="error-message"
+          *ngIf="isFieldInvalid('agreeToTerms', 'required')"
+        >
+          Debes aceptar los términos y condiciones
+        </div>
+      </div>
+      <div class="form-group">
+        <button nbButton status="primary" [disabled]="myForm.invalid">
+          Registrarse
+        </button>
+      </div>
+    </form>
+  </nb-card-body>
+</nb-card>
