--- a/src/app/pages/configuration/configuration.component.html
+++ b/src/app/pages/configuration/configuration.component.html
@@ -1,7 +1,9 @@
 <nb-layout>
   <nb-layout-column
-    ><div>
+  >
+    <div>
       <button (click)="open()" nbButton>Open Dialog</button>
-    </div></nb-layout-column
+    </div>
+  </nb-layout-column
   >
 </nb-layout>
