--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -1,4 +1,4 @@
-<nb-card accent="info" status="success" *ngFor="let item of mensajes">
+<nb-card *ngFor="let item of mensajes" accent="info" status="success">
   <nb-card-header>{{item.titulo}}</nb-card-header>
   <nb-card-body> {{item.texto}} </nb-card-body>
   <nb-card-footer>Fecha</nb-card-footer>
