--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 @use 'themes' as *;
 @use '@nebular/theme/styles/globals' as *;
+
 @include nb-install() {
   @include nb-theme-global();
-};
+}
+
+;
