--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,11 +5,17 @@
         (click)="toggle()"
         name="Nikita Poltoratsky"
         title="full-stack developer"
-      >
-      </nb-user>
+        picture="assets/man-597178_960_720.jpg"
+      ></nb-user>
     </div>
   </nb-layout-header>
   <nb-sidebar state="collapsed" tag="left">
+    <div>
+      <h4>
+        Cupo:
+        <p>$500.000</p>
+      </h4>
+    </div>
     <nb-card>
       <nb-menu [items]="items"></nb-menu>
     </nb-card>
