--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -30,7 +30,7 @@
               />
             </div>
             <button [disabled]="loginForm.invalid" nbButton status="success">
-              Login
+              Ingresar
             </button>
           </form>
         </nb-card-body>
