--- a/src/app/pages/auth/recovery-password/recovery-password.component.scss
+++ b/src/app/pages/auth/recovery-password/recovery-password.component.scss
@@ -1,29 +1,44 @@
-nb-card {
-  width: min-content;
-  margin: 0 auto;
+.login-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
+}
 
-  nb-card-header {
-    padding: 20px;
-    font-size: 24px;
-    font-weight: bold;
-  }
+form {
+  max-width: 400px;
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
-  nb-card-body {
-    padding: 20px;
+.form-group {
+  margin-bottom: 20px;
+}
 
-    form {
-      .form-group {
-        margin: 20px;
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
 
-        .error-message {
-          color: red;
-          margin: 5px;
-          font-size: 14px;
-        }
-      }
-    }
-  }
+input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+.button-group {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
