--- a/src/app/pages/auth/recovery-password/recovery-password.component.html
+++ b/src/app/pages/auth/recovery-password/recovery-password.component.html
@@ -1,42 +1,42 @@
 <nb-layout>
   <nb-layout-column>
-    <nb-card>
-      <nb-card-header>Recuperar contraseña</nb-card-header>
-      <nb-card-body>
-        <form [formGroup]="loginForm" (ngSubmit)="recoveryPassword()">
-          <div>
-            <nb-input-grou>
-              <nb-form-field>
-                <input
-                  nbInput
-                  formControlName="email"
-                  placeholder="Ingrese correo"
-                  type="email"
-                />
-              </nb-form-field>
-            </nb-input-grou>
-            <nb-input-grou>
-              <nb-form-field>
-                <input
-                  nbInput
-                  formControlName="telephone"
-                  placeholder="Teléfono"
-                  type="number"
-                />
-              </nb-form-field>
-            </nb-input-grou>
-          </div>
-          <br />
-          <button
-            nbButton
-            type="submit"
-            [disabled]="loginForm.invalid"
-            status="success"
-          >
-            Recuperar contraseña
-          </button>
-        </form>
-      </nb-card-body>
-    </nb-card>
+    <div class="login-container">
+      <nb-card>
+        <nb-card-header>Recuperar contraseña</nb-card-header>
+        <nb-card-body>
+          <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+            <div class="form-group">
+              <label for="documentNumber">
+                <nb-icon icon="person-outline"></nb-icon>
+                Documento</label
+              >
+              <input
+                formControlName="documentNumber"
+                id="username"
+                nbInput
+                type="text"
+              />
+            </div>
+            <div class="form-group">
+              <label for="email">
+                <nb-icon icon="at-outline"></nb-icon>
+                Correo electronico</label
+              >
+              <input formControlName="email" nbInput type="email" />
+            </div>
+            <div class="form-group">
+              <label for="password">
+                <nb-icon icon="phone-outline"></nb-icon>
+                Teléfono</label
+              >
+              <input formControlName="telephone" nbInput type="number" />
+            </div>
+            <button [disabled]="loginForm.invalid" nbButton status="success">
+              Recuperar
+            </button>
+          </form>
+        </nb-card-body>
+      </nb-card>
+    </div>
   </nb-layout-column>
 </nb-layout>
