--- a/src/app/pages/auth/recovery-password/recovery-password.component.html
+++ b/src/app/pages/auth/recovery-password/recovery-password.component.html
@@ -5,32 +5,43 @@
         <nb-card-header>Recuperar contraseña</nb-card-header>
         <nb-card-body>
           <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-            <div class="form-group">
+
+            <nb-input-group>
               <label for="documentNumber">
-                <nb-icon icon="person-outline"></nb-icon>
-                Documento</label
-              >
-              <input
-                formControlName="documentNumber"
-                id="username"
-                nbInput
-                type="text"
-              />
-            </div>
-            <div class="form-group">
+                <nb-icon icon="unlock-outline"></nb-icon>
+                Documento</label>
+              <input formControlName="documentNumber" nbInput type="text" />
+              <div *ngIf="isFieldInvalid('documentNumber', 'required')" class="error-message">
+                El documento es requerido
+              </div>
+              <div *ngIf="isFieldInvalid('documentNumber', 'minlength')" class="error-message">
+                El nombre debe tener al menos 3 caracteres
+              </div>
+            </nb-input-group>
+
+            <nb-input-group>
               <label for="email">
-                <nb-icon icon="at-outline"></nb-icon>
-                Correo electronico</label
-              >
+                <nb-icon icon="unlock-outline"></nb-icon>
+                Correo electronico</label>
               <input formControlName="email" nbInput type="email" />
-            </div>
-            <div class="form-group">
-              <label for="password">
-                <nb-icon icon="phone-outline"></nb-icon>
-                Teléfono</label
-              >
+              <div *ngIf="isFieldInvalid('email', 'required')" class="error-message">
+                El correo es requerido
+              </div>
+            </nb-input-group>
+
+            <nb-input-group>
+              <label for="telephone">
+                <nb-icon icon="unlock-outline"></nb-icon>
+                Teléfono</label>
               <input formControlName="telephone" nbInput type="number" />
-            </div>
+              <div *ngIf="isFieldInvalid('telephone', 'required')" class="error-message">
+                El teléfono es requerido
+              </div>
+              <div *ngIf="isFieldInvalid('telephone', 'minlength')" class="error-message">
+                El nombre debe tener al menos 3 caracteres
+              </div>
+            </nb-input-group>
+
             <button [disabled]="loginForm.invalid" nbButton status="success">
               Recuperar
             </button>
